src/objects/Education_History__c.object
<CustomObject>
    <label>Education History</label>
    <nameField>
        <displayFormat>EH - {0000}</displayFormat>
        <label>Education History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Education History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>School</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Education History</relationshipLabel>
        <relationshipName>Education_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Class_Rank_Scale__c</fullName>
        <label>Class Rank Scale</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Exact</fullName>
                </value>
                <value>
                    <fullName>Decile</fullName>
                </value>
                <value>
                    <fullName>Quintile</fullName>
                </value>
                <value>
                    <fullName>Quartile</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Class_Rank_Weighted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Class Rank Weighted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Class_Rank__c</fullName>
        <label>Class Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Education History</relationshipLabel>
        <relationshipName>Education_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Degree_Earned__c</fullName>
        <label>Degree Earned</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bachelor</fullName>
                </value>
                <value>
                    <fullName>Master</fullName>
                </value>
                <value>
                    <fullName>PHD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>From_Date__c</fullName>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GPA_Scale_Reporting__c</fullName>
        <label>GPA Scale Reporting</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>4-100</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GPA_Weighted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GPA Weighted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GPA__c</fullName>
        <label>GPA</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Graduation_Date__c</fullName>
        <label>Graduation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>To_Date__c</fullName>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>